add IDE run configuration